2.3.0

- Public header cleanup and documentation update.
- Update Doxygen config.

2.2.1 - 2013/06/29

- Bug #54011: Use POSIX API for files on MacOS. (Misty De Meo)
- Bug #58175: Replace OS X FlatCarbon headers. (Misty De Meo)
- Added a manpage for exempi(1).
- Added the -n option to the command line for arbitrary namespaces.

2.2.0 - 2012/02/21

- New 'exempi' command line tool.
- Upgrade XMPCore to Adobe XMP 5.1.2
  - Quicktime support now works without Quicktime.
  - Reconciliation with ID3v2.
  - "Blessed" 64-bits support (we already had it in exempi).
  - Slight change in the way XMP are written for MWG compliance.
  - Fixed a serious bug with RIFF.
  - Change in the way local text encoding is dealt with.
  - Alternative languages behave slightly differently by changing
    how the default language property is managed.
  - Probably a bunch of bugs fixed that I don't know about.
- Update unit tests.
  - Refactor the fixtures.
- Use automake silent rules instead of shave. (build only)
- "make dist" generate a bzip2 archive as well. (build only)
- Remove some obsolete warning flags. (build only)
- Build xmpcommandtool
- New: API xmp_files_get_format_info().
- New: API xmp_files_check_file_format().
- New: API xmp_files_get_file_info().
- New: API XMP_PROP_ARRAY_INSERT_BEFORE, XMP_PROP_ARRAY_INSERT_AFTER array options.
- New: C++ helpers in xmp++.hpp.

Bug fixes:

- Bug #37747: mismatch delete/delete[] and new/new[] (from Meego 
  https://bugs.meego.com/show_bug.cgi?id=14661)

2.1.1 - 2009/06/30

New features:

- Added shave to the build system for sane output. (build only)

Bug fixes:

- Bug #16030: if the property is an array or struct allow "" to be passed
  as a value.
- Bug #19312: source/XMPFiles/FileHandlers/P2_Handler.cpp was using 
  an improper string comparison. (made rpmlint unhappy).
- Bug #20554: Missing file on MacOS X.
- Bug #20554: Detect ldflags properly.
- Bug #20622: Catch unhandled exceptions in xmp_files_can_put_xmp().